Update content and structure in index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <div class="container">
     <h1>Saeed...</h1>
-    <p>If you're reading this, it's already too late.</p>
-    <p>November 19, 2023 changed everything.</p>
+    <p>If you're reading this, .</p>
+    <p>I hope you feel how deeply you’re loved.</p>
+    <p>I don’t want a life that doesn’t have you in it.</p>
 
     <button onclick="playMusic()">Play Music 🎵</button>
     <button onclick="location.href='page2.html'">
@@ -24,4 +25,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
